# tripleagent

./: .gitignore  README.md  pipeline.py  pyproject.toml  test_agentsafety.py
configs/: agentbench.yaml  agentharm.yaml  agentsafetybench.yaml  default.yaml
configs/experiments/: agentbench.yaml  agentharm.yaml  agentsafetybench.yaml  default.yaml
configs/models/: hf_inference.yaml  hf_local.yaml  openai.yaml
data/: agentsafetybench.py
scripts/: example_pipe.py  run_eval.py  run_eval_agentbench.py  run_eval_agentharm.py  run_eval_agentsafetybench.py  run_experiment.py  test_agent.py  test_agent_no_tools.py  test_agentharm.py  test_agentsafetybench.py  test_agentsafetybench_tools.py
src/tripleagent/: config.py
src/tripleagent/agents/: example_tools.py  runner.py  tools.py
src/tripleagent/benchmarks/: agentbench.py  agentharm.py  agentharm_adapter.py  agentharm_behavior.py  agentsafety_bench.py  agentsafetybench.py  agentsafetybench_adapter.py  base.py  utils.py
src/tripleagent/benchmarks/helpers/: agentharm_prompts.py  agentharm_tools.py  agentsafetybench_envs.py
src/tripleagent/mcp/: client.py  tool.py
src/tripleagent/models/: base.py  config.py  factory.py
src/tripleagent/models/backends/: huggingface.py  openai.py
src/tripleagent/reporting/: agentbench.py  agentharm.py  agentsafetybench.py  base.py
src/tripleagent/scoring/: agentharm.py  agentsafety_score.py  agentsafetybench.py  base.py
src/tripleagent/tools/: client.py  tool.py
