[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tripleagent"
version = "0.1.0"
description = "Agent eval pipeline"
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
    "openai>=0.27.0",
    "transformers>=4.30.0",
    "datasets>=2.13.0",
    "huggingface_hub>=0.32.0",
    "inspect_ai>=0.3.25",
    "inspect-evals>=0.3.102",

]

[project.optional-dependencies]
local_models = [
    "torch>=2.0.0",
    "accelerate>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]